--- a/Portfólio/components/css/acordeon.css
+++ b/Portfólio/components/css/acordeon.css
@@ -1,72 +1,68 @@
 .acordeon {
-    display: flex;
-    flex-direction: column;
-    width:100%;
-    border:1px solid #fff;
-    border-radius: 1rem;
-    margin: 1rem 0;
-    transition: .25s ease-in-out;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  border: 1px solid #fff;
+  border-radius: 1rem;
+  margin: 1rem 0;
+  transition: 0.25s ease-in-out;
 }
 
-.acordeon .trigger{
-    font-size: 1.5rem;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem 2rem;
-    font-weight: 700;
-    background-color: transparent;
-    color:#fff;
-    border: none;
-   
-
+.acordeon .trigger {
+  font-size: 1.5rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 2rem;
+  font-weight: 700;
+  background-color: transparent;
+  color: #fff;
+  border: none;
 }
 
 .acordeon .trigger h2 {
-    margin: 0;
-    font-size: 1.5rem;
-    text-align: start;
+  margin: 0;
+  font-size: 1.5rem;
+  text-align: start;
 }
 
 .acordeon.open .trigger::after {
-    transform: rotate(180deg);
+  transform: rotate(180deg);
 }
 
 .acordeon.open,
-.acordeon:hover{
-    background-color: #55569E;
-    border-color:#55569E;
+.acordeon:hover {
+  background-color: #55569e;
+  border-color: #55569e;
 }
-
-
 
 .acordeon .trigger::after {
-    content: '';
-    display:inline-block;
-    position: relative;
-    width: 2rem;
-    height: 1.5rem;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-image: url('/components/img/icons/arrow-top.svg');
-    transition: .25s;
+  content: "";
+  display: inline-block;
+  position: relative;
+  width: 2rem;
+  height: 1.5rem;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-image: url("/Portfólio/components/img/icons/arrow-top.svg");
+  transition: 0.25s;
 }
 
-.acordeon .trigger:hover{
-    cursor: pointer;
+.acordeon .trigger:hover {
+  cursor: pointer;
 }
 
-.acordeon .content{
-   overflow: hidden;
-   padding: s1rem;
-   height: 0;
-   opacity: 0;
-   transition: opacity .25s ease-in-out ;
+.acordeon .content {
+  overflow: hidden;
+  padding: s1rem;
+  height: 0;
+  opacity: 0;
+  transition: opacity 0.25s ease-in-out;
 }
 .acordeon.open .content {
-    display: inline-block;
-    height: auto;
-    padding: 0 1rem 1rem 2rem;
-    opacity: 1 ;
+  display: inline-block;
+  height: auto;
+  padding: 0 1rem 1rem 2rem;
+  opacity: 1;
 }
