--- a/Portfólio/components/css/portfolio.css
+++ b/Portfólio/components/css/portfolio.css
@@ -1,51 +1,51 @@
 .content .portfolio {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start; /* Alinha os itens à esquerda */
-    justify-content: flex-start;
+  display: grid;
+  grid-template-columns: repeat(auto-fill,minmax(250px, 1fr)); 
+  gap: 1.5rem; 
+  justify-content: center;
+  padding: 1rem 0;
 }
-
 .portfolio {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    width: 100%;
-    justify-content: flex-start;
-    flex-direction: column;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  width: 100%;
+  justify-content: flex-start;
+  flex-direction: column;
 }
 
 .portfolio li {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    margin: .5rem 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  margin: 0.5rem 0;
 }
 
 .portfolio li .title {
-    font-size: 2rem;
-    font-weight: 700;
-    margin-bottom: .5rem;
-    display: flex;
-    align-items: center;
+  font-size: 2rem;
+  font-weight: 700;
+  margin-bottom: 0.5rem;
+  display: flex;
+  align-items: center;
 }
 
 .portfolio li .title.github::before {
-    content: '';
-    display: inline-block;
-    width: 2rem;
-    height: 2rem;
-    background-size: contain;
-    background-repeat: no-repeat;
-    margin-right: .5rem;
-    background-image: url('/components/img/icons/github.svg');
+  content: "";
+  display: inline-block;
+  width: 2rem;
+  height: 2rem;
+  background-size: contain;
+  background-repeat: no-repeat;
+  margin-right: 0.5rem;
+  background-image: url("/Portfólio/components/img/icons/github.svg");
 }
 
 .portfolio li a {
-    font-size: 1rem;
-    margin-top: 1rem;
+  font-size: 1rem;
+  margin-top: 1rem;
 }
 
 a {
-    color: #fff;
-    text-decoration: underline;
+  color: #fff;
+  text-decoration: underline;
 }
