--- a/components/css/portfolio.css
+++ b/components/css/portfolio.css
@@ -1,7 +1,7 @@
 .content .portfolio {
   display: grid;
-  grid-template-columns: repeat(auto-fill,minmax(250px, 1fr)); 
-  gap: 1.5rem; 
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 1.5rem;
   justify-content: center;
   padding: 1rem 0;
 }
@@ -37,7 +37,7 @@
   background-size: contain;
   background-repeat: no-repeat;
   margin-right: 0.5rem;
-  background-image: url("/Portfólio/components/img/icons/github.svg");
+  background-image: url("/components/img/icons/github.svg");
 }
 
 .portfolio li a {
