--- a/components/css/languages.css
+++ b/components/css/languages.css
@@ -23,6 +23,6 @@
   height: 1rem;
   background-repeat: no-repeat;
   background-size: contain;
-  background-image: url("../components/img/icons/check.svg");
+  background-image: url("../img/icons/check.svg");
   margin-right: 0.5rem;
 }
