--- a/components/css/skills.css
+++ b/components/css/skills.css
@@ -47,7 +47,7 @@
   display: inline-block;
   width: 1rem;
   height: 1rem;
-  background-image: url("../components/img/icons/check.svg");
+  background-image: url("../img/icons/check.svg");
   background-repeat: no-repeat;
   background-size: contain;
   margin-right: 0.5rem;
