--- a/components/css/footer.css
+++ b/components/css/footer.css
@@ -1,12 +1,13 @@
 footer {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: center;
-    padding: 1rem;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 1rem;
 }
 
 footer img {
-    max-width: 100px;
+  max-width: 100px;
+  margin-top: 12rem;
 }
